2022-05-02  Wang Kai  <kaiwkx@gmail.com>

	* leetcode.el:
	- use `cl-defstruct` to defien abstract type
	- remove hardcode constants
	- add `leetcode-solution-mode`, provide more keybindings
	- add `leetcode-focus` option to avoid messy windows
	- add result font lock

2022-02-06  Wang Kai  <kaiwkx@gmail.com>

	* leetcode.el:
	- Add leetcode-daily
	- Fix slugify title regex
	- Optmize tags parsing with hash table

2021-06-20  Wang Kai  <kaiwkx@gmail.com>

	* leetcode.el:
	- Save problems with list instead of vector, because of problem id inconsistency.
	- Add variable to control tag display.
	- Fix duplicate tag after refresh fetch.

2020-07-11  Wang Kai  <kaiwkx@gmail.com>

	* leetcode.el: remove dash.el dependency.

2020-05-31  Wang Kai  <kaiwkx@gmail.com>

	* leetcode.el: Cleans LeetCode cookies in `url-cookie-file' before
	login, because we can't figure out when to expire the session.

2020-05-23  Wang Kai  <kaiwkx@gmail.com>

	* leetcode.el: add option for saving solutions, install my_cookies automatically.

2020-01-01  Wang Kai  <kaiwkx@gmail.com>

	* leetcode.el: leetcode.com don't allow third party login, so we retrieve LeetCode session from Chrome cookies

2019-10-11  Wang Kai  <kaiwkx@gmail.com>

	* leetcode.el (leetcode-try): When encounter syntax error, .expected_code_answer is null. Handle this situation depend on status_code.

2019-10-10  Wang Kai  <kaiwkx@gmail.com>

	* leetcode.el: submissions detail API modification

2019-10-09  Wang Kai  <kaiwkx@gmail.com>

	* leetcode.el (leetcode--fetch-problem): filter problems by regex or tag

2019-09-06  Wang Kai  <kaiwkx@gmail.com>

	* leetcode.el: use emacs-aio and remove request.el and
	deferred.el, now you don't need cURL installed.
	* README.md: update README

2019-08-27  Wang Kai  <kaiwkx@gmail.com>

	* leetcode.el (leetcode--problem-link): add problem button in
	description buffer

2019-07-07  Wang Kai  <kaiwkx@gmail.com>

	* leetcode.el: use seq.el instead of dash, because it's in emacs